--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
+    "@syncfusion/ej2-angular-charts": "^24.2.9",
     "bootstrap": "^3.4.1",
     "express": "^4.18.2",
     "ngx-bootstrap": "^12.0.0",
